# Project_BtRadio

./: .gitignore  README.md
00_Requirements_Inputs/: ARC42_IntroAndGoals.md  ARC42_useCases.drawio  RadioBluetooth_architecture_main.odt  TICKETS.md
01_Analysis/: ARC42_ContextAndScope.md  ARC42_contextesDiagram.drawio
02_Architecture_Modelisation/: ARC42_RiskDebtDecisions.md  ARC42_architectureMain.drawio  ARC42_architectureMain.md
02_Architecture_Modelisation/Architecture_Behavioral_Diagrams/: bt_rn52_commandDescription.md  hmi_description.md
03_Development/Hardware/Proto_Bluetooth/: Board_Bluetooth_radio_platform-eagle-import.kicad_sym  Board_Bluetooth_radio_platform.kicad_pcb  Board_Bluetooth_radio_platform.kicad_prl  Board_Bluetooth_radio_platform.kicad_pro  Board_Bluetooth_radio_platform.kicad_sch  Board_Bluetooth_radio_platform.xml  BtRadio_audioAmplifier.kicad_sch  BtRadio_audioPreamplifier.kicad_sch  BtRadio_phillipsConnectors.kicad_sch  btRadio_epaper.kicad_sch  fp-info-cache  sym-lib-table
03_Development/Hardware/Proto_Bluetooth/Board_production/: Board_Bluetooth_radio_platform_BOM.csv  Board_Bluetooth_radio_platform_JLCPCB_BOM.csv  Board_Bluetooth_radio_platform_OWN_BOM.csv  Board_Bluetooth_radio_platform_POSITIONFILE_TOP.csv
03_Development/Hardware/Proto_Bluetooth/Board_production/gerber_files/: Board_Bluetooth_radio_platform-B_Cu.gbr  Board_Bluetooth_radio_platform-B_Mask.gbr  Board_Bluetooth_radio_platform-B_Paste.gbr  Board_Bluetooth_radio_platform-B_Silkscreen.gbr  Board_Bluetooth_radio_platform-Edge_Cuts.gbr  Board_Bluetooth_radio_platform-F_Cu.gbr  Board_Bluetooth_radio_platform-F_Mask.gbr  Board_Bluetooth_radio_platform-F_Paste.gbr  Board_Bluetooth_radio_platform-F_Silkscreen.gbr  Board_Bluetooth_radio_platform-Margin.gbr  Board_Bluetooth_radio_platform-NPTH-drl_map.dxf  Board_Bluetooth_radio_platform-NPTH.drl  Board_Bluetooth_radio_platform-PTH-drl_map.dxf  Board_Bluetooth_radio_platform-PTH.drl  Board_Bluetooth_radio_platform-job.gbrjob
03_Development/Hardware/Proto_Bluetooth/Custom_Libraries/MOUDLE-BLUETOOTH-AUDIO-RN52-I_RM_50P-26X13.5MM_/: LGA50-1.0-26X13.5MM.kicad_mod  MOUDLE-BLUETOOTH-AUDIO-RN52-I_RM_50P-26X13.5MM_.kicad_sym
03_Development/Hardware/Proto_Bluetooth/Custom_Libraries/TPA6112A2DGQ/: IC_XTR111AIDGQR.kicad_mod  TPA6112A2DGQ.kicad_sym
03_Development/Hardware/Proto_Bluetooth/Custom_Libraries/TS5A2234/: Analog_Switch_TI.kicad_sym
03_Development/Hardware/Proto_audioAmplifier/: audio_classA_currentAmplifier.kicad_sch
03_Development/Software/code/: CMakeLists.txt  cmake_install.cmake  main.c
03_Development/Software/code/bt_rn52/: CMakeLists.txt  Makefile  bt_rn52_application.c  bt_rn52_application.h  cmake_install.cmake
03_Development/Software/code/fm_si470x/: CMakeLists.txt  Makefile  cmake_install.cmake  si470x_api.c  si470x_api.h  si470x_application.c  si470x_application.h  si470x_comm.c  si470x_comm.h  si470x_driver.c  si470x_driver.h  si470x_driver_regs.h  si470x_regs.h
03_Development/Software/code/hal_radio/: CMakeLists.txt  hal_main.c  hal_main.h
03_Development/Software/code/hmi_ePaper/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  EPD_5in83_V2.c  EPD_5in83_V2_test.c  EPD_5in83b_V2_test.c  EPD_Test.h  GUI_Paint.c  GUI_Paint.h  ImageData.c  ImageData.h  ep_application.c  ep_application.h  font20.c  font24.c
03_Development/Software/code/hmi_ePaper/lib/Fonts/: font12.c  font16.c  font8.c
03_Development/Software/code/hmi_ePaper/lib/GUI/: GUI_Paint.c  GUI_Paint.h
03_Development/Software/code/hmi_ePaper/lib/e-Paper/: EPD_5in83_V2.c  EPD_5in83_V2.h  EPD_5in83b_V2.c  EPD_5in83b_V2.h
03_Development/Software/code/hmi_ePaper/lib/ePaper/: EPD_5in83b_V2.c
03_Development/Software/code/rdsDecoder/: CMakeLists.txt  Makefile  cmake_install.cmake  rdsDecoder.c  rdsDecoder.h
03_Development/Software/code/re_Buttons/: CMakeLists.txt  re_application.c  re_application.h
06_Doc/: SiliconLabs_Si470x_decrypt_RDS_RT.ods
